add users and authors
